@@ -97,6 +97,7 @@ public:
 
 public slots:
     void sendFile(const QString &fullJid, const QString &filePath);
+    void rosterDrop(QDropEvent *event, const QModelIndex &index);
     void rosterMenu(QMenu *menu, const QModelIndex &index);
 
 protected:
